@@ -292,6 +292,8 @@ New in v0.8.00 (2016/07/??)
   - Added upload progress reporting support
 * Fixed bug #1448094 with patch from Tomáš Zvala
   - Don't log incremental deletes for chains that have no incrementals
+* Fixed bug #1724144 "--gpg-options unused with some commands"
+  - Add --gpg-options to get version run command
 
 
 New in v0.7.08 (2016/07/02)
